--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="ex06-6.js"></script>
  <script src="ex06-7.js"></script>
   <script src="ex06-8.js"></script>
+   <script src="ex06-9.js"></script>
   <script src="ex06-10.js"></script>
 
 </head>
@@ -65,10 +66,10 @@
      タイマーイベントによる実行6-10
    </h1>
    <form name="timer">
-     <input type="button" value="スタート"
-            onclick="startfnc()">
-     <be>
+     <input type="button" value="スタート" onclick="startfnc()">
+     <br>
      <input type="text" name="moji" size="30" value="">
    </form>
 
   </body>
+</html>
