--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>タイトル</title>
-<link rel="stylesheet" href="mystyle.css">
+<!--<link rel="stylesheet" href="mystyle.css">-->
   <script src="ex06-5.js"></script>
   <script src="ex06-6.js"></script>
  <script src="ex06-7.js"></script>
   <script src="ex06-8.js"></script>
    <script src="ex06-9.js"></script>
   <script src="ex06-10.js"></script>
+   <script src="ex06-11.js"></script>
 
 </head>
  <body>        
@@ -64,12 +65,24 @@
    
 <h1>
      タイマーイベントによる実行6-10
-   </h1>
-   <form name="timer">
+</h1>
+  <form name="timer">
      <input type="button" value="スタート" onclick="startfnc()">
      <br>
      <input type="text" name="moji" size="30" value="">
-   </form>
+</form>
+<form>
+  <input type="button" value="Timer"
+         onclick="setTimeout('mes()',3000)">
+</form>
 
+<h1>
+  タイマーイベントによる実行6-11
+</h1>
+<form name="timer2">
+  <input type="button"value="スタート" onclick="hyoji2()">
+  <br>
+  <input type="text" name="moji2" size="30" value="">
+</form>
   </body>
 </html>
