--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
    <script src="ex06-9.js"></script>
   <script src="ex06-10.js"></script>
    <script src="ex06-11.js"></script>
+     <script src="ex06-12.js"></script>
+    <script src="ex06-13.js"></script>
+  <script src="ex09-2.js"></script>
 
 </head>
  <body>        
@@ -84,5 +87,28 @@
   <br>
   <input type="text" name="moji2" size="30" value="">
 </form>
+<h1>
+  タイマーイベントによる実行06-12
+</h1>
+  <div id="image1">
+     
+     <input type="button" value="画像の変更"
+            onclick="imgchange1();">
+     
+     <img src='./image/josai.png' id="logo" alt="josai Logo"></div>
+   </div> 
+
+<h1>
+  タイマーイベントによる実行06-13
+
+
+<h1>
+  JavvaScriptの変数とデバッガを理解09-2</h1>
+<p>
+  下のボタンを押すと数字が表示されます
+</p>
+<p>
+  <input type="button" value="実行ボタン" onclick="addCount()">
+</p>
   </body>
 </html>
