ex06-12,ex06-13_end

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div id="back">
     <input type="button" value="変更後3秒でまた戻る" onclick="ChangeImageAndBack();">
 
-    <img src='./image/josai.png' id="img13" alt="Josai Logo" class="imagechange">
+    <img src='./image/456.png' id="img13" alt="Josai Logo" class="imagechange">
 
   </div>
   <br>
