--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
   <input type="button" value="あいさつ" onclick="sayhello71();">
 <p>
   誰？<input type="text"id="who71"></p>
-  </body>
+  <br>
 <h1>
-  足し算</h1>
+  足し算7-3</h1>
 <p>
   <input type="text" id="input1">+<input type="text" id="input2">
   <input type="button" value="計算" onclick="add();">
 </p>
 
-
+</body>
 </html>
