--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <script src="ex09-2.js"></script>
   <script src="ex07-1.js"></script>
   <script src="ex07-3.js"></script>
+  <script src="ex07-4.js"></script>
+  <script src="ex07-5.js"></script>
 
 </head>
  <body>        
@@ -122,6 +124,24 @@
   <input type="text" id="input1">+<input type="text" id="input2">
   <input type="button" value="計算" onclick="add();">
 </p>
-
+<br>
+<h1>
+  ボスマス指数7-4
+</h1>
+身長：<input type="text" id="both1">(ｃｍ)
+体重：<input type="text" id="both2">(ｋｇ)
+<input type="button" value="計算" onclick="abc();">
+<h1>
+  なぞなぞ
+</h1>
+<p>
+  目を閉じてないと見られないものはなーに？7-5
+</p>
+<p>
+  答(漢字一文字で):<input type="text" id="answer">
+  <input type="button" value="解答" onclick="nazo()";>
+</p>
+<input type="text" id="answer">
+<input type="button" value="解答" onclick="nazo();">
 </body>
 </html>
