--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="ex07-3.js"></script>
   <script src="ex07-4.js"></script>
   <script src="ex07-5.js"></script>
+   <script src="ex07-8.js"></script>
 
 </head>
  <body>        
@@ -141,7 +142,11 @@
   答(漢字一文字で):<input type="text" id="answer">
   <input type="button" value="解答" onclick="nazo()";>
 </p>
-<input type="text" id="answer">
-<input type="button" value="解答" onclick="nazo();">
+<p>
+  答(はずれあり):
+<input type="text" id="answer2">
+<input type="button" value="解答" onclick="nazo2();">
+
 </body>
+</p>
 </html>
