--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <script src="ex07-3.js"></script>
   <script src="ex07-4.js"></script>
   <script src="ex07-5.js"></script>
+  <script src="ex07-6.js"></script>
    <script src="ex07-8.js"></script>
+  <script src="ex07-11.js"></script>
 
 </head>
  <body>        
@@ -146,7 +148,16 @@
   答(はずれあり):
 <input type="text" id="answer2">
 <input type="button" value="解答" onclick="nazo2();">
-
+</p><p>  
+7-6
+<input type="text" id="answer3">
+<input type="button" value="解答" onclick="nazo3();">
+</p>
+<p>
+  ボディマス指数(警告付き)
+ 身長：<input type="text" id="both3">(ｃｍ)
+体重：<input type="text" id="both4">(ｋｇ)
+<input type="button" value="計算" onclick="azw();">
 </body>
 </p>
 </html>
